(bug): IntelliJ Error when running unit test